Reduce findbugs warning count